<resources>
    <string name="app_name">Music Beats</string>
    <string name="now_playing">Now playing</string>
    <string name="SongTitle">Love is Gone</string>
    <string name="artistName">Slander</string>
    <string name="_00_00">00:00</string>
    <string name="duration">00:00</string>
    <string name="cover">Cover</string>
    <string name="albumName">Slander</string>
    <string name="love_is_gone_by_slander_forever_on_love">lOVE IS GONE BY SLANDER FOREVER ON LOVE</string>
    <string name="like">like</string>
    <string name="todo">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="liked_songs">Liked Songs</string>
    <string name="playlists">Your Playlists</string>
    <string name="sort">Sort</string>
    <string name="playlist">Playlists</string>
    <string name="_60_minutes">60 Minutes</string>
    <string name="_30_minutes">30 Minutes</string>
    <string name="_15_minutes">15 Minutes</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="your_name">Your Name</string>
    <string name="playlistname">PlayListName</string>
    <string name="createdBy">createdBy</string>
    <string name="created_on">Created On</string>
    <string name="total_songs">Total Songs</string>
    <string name="add">Add</string>
    <string name="remove_all">Remove All</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="name">Shahzaman Rai</string>
    <string name="details">Adaptable Computer Science major (3.4 GPA) currently attending the University of Okara. I aim to leverage proven communication, creative thinking, and interpersonal skills. Frequently praised as adaptable by my peers.</string>
    <string name="contact_me">Contact Me</string>
    <string name="playpause">playPause</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="your_message_here">Message *</string>
    <string name="email_address">Email (Optional)</string>
    <string name="name1">Name *</string>
    <string name="submit">Submit</string>
    <string name="toggle_theme">Toggle Theme</string>
</resources>