<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Music.FontInterface"
    tools:context=".activities.MusicInterface">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:contentDescription="@string/like"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/back"
            app:tint="@color/white"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/now_playing"
            android:textColor="@color/white"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/interfaceLikeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@null"
            android:contentDescription="@string/like"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/heart" />


    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/interfaceCover"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="7"
        android:background="@drawable/image_as_cover"
        android:contentDescription="@string/cover"
        app:shapeAppearanceOverlay="@style/roundedImageView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/interfaceSongName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="15dp"
            android:ellipsize="marquee"
            android:gravity="center"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:singleLine="true"
            android:text="@string/SongTitle"

            />

        <TextView
            android:id="@+id/interfaceArtistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="15"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/artistName"
            android:textSize="15sp"
            android:theme="@style/Theme.Music.FontColor" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/interfaceSeekStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textSize="11sp" />

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:theme="@style/Theme.Music.progressBar" />

        <TextView
            android:id="@+id/interfaceSeekEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textSize="11sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:theme="@style/Theme.Music.IconFillColor">

        <ImageButton
            android:id="@+id/interfaceShuffle"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/shuffle" />

        <ImageButton
            android:id="@+id/interfaceRepeat"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/repeat" />

        <ImageButton
            android:id="@+id/interfaceTimer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/timer" />

        <ImageButton
            android:id="@+id/interfaceEqualizer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/equalizer" />

        <ImageButton
            android:id="@+id/interfaceShare"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/todo"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/mainBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_button"
        android:orientation="horizontal"
        android:theme="@style/Theme.Music.IconFillColorTransparent">

        <ImageButton
            android:id="@+id/interfacePrevious"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/previous"
            android:src="@drawable/previous" />

        <ImageButton
            android:id="@+id/interfacePlay"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/playpause"
            android:src="@drawable/play" />

        <ImageButton
            android:id="@+id/interfaceNext"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/next"
            android:src="@drawable/next" />

    </LinearLayout>
</LinearLayout>