<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Music.Font"
    tools:context=".FeedbackActivity">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:background="@null"
            android:contentDescription="@string/like"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:src="@drawable/back"
            android:theme="@style/Theme.Music.IconFillColor"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/feedback"
            android:textColor="@color/music_icon_tint"
            android:textSize="26sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameFeedbackView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:padding="15dp"
        app:boxStrokeColor="@color/green"
        app:startIconDrawable="@drawable/ic_baseline_person_24"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/name1"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailFeedbackView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nameFeedbackView"
        android:layout_centerInParent="true"
        android:padding="15dp"
        app:boxStrokeColor="@color/green"
        app:startIconDrawable="@drawable/ic_baseline_email_24"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_address"
            android:inputType="text"
            android:maxLength="30"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/messageFeedbackView"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/emailFeedbackView"
        android:layout_centerInParent="true"
        android:padding="15dp"
        app:boxStrokeColor="@color/green"
        app:startIconDrawable="@drawable/ic_baseline_feedback_24"
        app:startIconTint="@color/green">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/messageFeedback"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/your_message_here"
            android:inputType="text"
            android:maxLength="200"
            android:minLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageFeedbackView"
        android:layout_centerInParent="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/round_button1"
        android:text="@string/submit"
        android:textColor="@color/onGreen"
        android:textSize="16sp"
        app:backgroundTint="#0c5a27" />

</RelativeLayout>