<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.Music.FontColorDetails"
    tools:context=".PlaylistActivityDetails">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Music.IconFillColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="15dp"
            android:background="@null"
            android:contentDescription="@string/albumName"
            android:paddingHorizontal="10dp"
            android:src="@drawable/back"
            tools:ignore="DuplicateSpeakableTextCheck" />


        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bold"
            android:text="@string/playlist_name"
            android:textSize="26sp" />

        <androidx.appcompat.widget.SearchView
            android:id="@+id/searchView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginHorizontal="10dp"
            app:defaultQueryHint="Search music"
            app:searchHintIcon="@null"
            app:searchIcon="@drawable/search_icon" />


    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/imagePAD"
        android:layout_width="150dp"
        android:layout_height="150dp"

        android:padding="15dp"
        android:src="@drawable/image_as_cover"
        app:layout_constraintBottom_toTopOf="@id/listViewPAD"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:shapeAppearance="@style/roundedImageView" />

    <LinearLayout
        android:id="@+id/linearLayout"
        style="@style/Theme.Music.FontColorPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingVertical="15dp"
        app:layout_constraintBottom_toTopOf="@+id/listViewPAD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imagePAD"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/PlaylistNamePAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:text="@string/playlistname"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/PlaylistCreatedByPAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:text="@string/createdBy"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/PlaylistDatePAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:singleLine="true"
            android:text="@string/created_on"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/PlaylistSizePAD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/total_songs"
            android:textSize="15sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listViewPAD"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="10dp"
        android:scrollbarThumbVertical="@drawable/scroll_bar"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@+id/imagePAD"
        app:spanCount="1" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <include
            android:id="@+id/addPAD"
            layout="@layout/add_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toStartOf="@+id/RemovePAD"
            app:layout_constraintStart_toStartOf="parent" />

        <include
            android:id="@+id/RemovePAD"
            layout="@layout/delete_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/addPAD" />
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="@color/green"
        android:contentDescription="@string/_00_00"
        android:src="@drawable/play_now"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>