<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/_15_minutes"
            android:textColor="@color/bgTimer"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/_30_minutes"
            android:textColor="@color/bgTimer"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_margin="8dp"
            android:src="@drawable/timer_icon"
            app:tint="@color/green" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:text="@string/_60_minutes"
            android:textColor="@color/bgTimer"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>